<resources>
    <string name="app_name">ParkHere</string>
    <string name="logo">logo</string>
    <string name="google_login_text">Login With Google</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="action_location">location</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">CANCEL</string>
    <string name="select">SELECT</string>
    <string name="logout">Log out</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="author">Author: </string>
    <string name="post">Post</string>
    <string name="book">Book</string>
    <string name="enter_title">Enter title</string>
    <string name="next">NEXT</string>
    <string name="rating">Rating: </string>
    <string name="five">/5.0</string>
    <!--inn profile layout-->
    <string name="myplaces">My Places</string>
    <string name="myprofile">My Profiles</string>
    <string name="myvehicles">My Vehicles</string>
    <string name="myrentingspots">My Renting Spots</string>

    <string name="email">Email: </string>
    <string name="full_name">Full name: </string>
    <string name="phone">phone: </string>

    <string name="vin">VIN: </string>
    <string name="color">Color: </string>
    <string name="plate">Plate #: </string>

    <string name="upload">UPLOAD</string>
    <string name="brand">Brand: </string>
    <string name="make">Make: </string>
    <string name="year">year: </string>

    <string name="address">Address: </string>
    <string name="SpotNum">Spot #: </string>

    <string name="type">Type: </string>
    <string name="description">Description: </string>
    <string name="price">Price: </string>
    <string name="permitRequired">Permit Required</string>
    <string name="spotNumber">Spot Number: </string>
    <string name="renting">Available: </string>
    <string name="nextAvailable">Next Available: </string>

    <!--place holder strings-->
    <string name="ph_title">title</string>
    <string name="ph_owner">title</string>
    <string name="ph_date_posted">date posted</string>
    <string name="ph_price">$price</string>
    <string name="ph_description">description</string>

    <!--vehicles place holder strings-->
    <string name="ph_vehicle_name">Toyota Corolla 2015</string>
    <string name="ph_vin">WAUFFAFM3CA000000</string>
    <string name="ph_color">Black</string>
    <string name="ph_plate_number">1273ZG</string>
    <string name="ph_address">1 Washington Sq, San Jose, CA 95112</string>

    <!--strings for shortcut implementation-->
    <string name="quickstart">View Profile</string>
    <string name="quickstart_long">View My Profile</string>
    <string name="quickstart2">Add Vehicle</string>
    <string name="quickstart_long2">Add a Vehicle</string>
    <string name="quickstart_disabled">quickstart_disabled</string>

    <string-array name="spot_type_array">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Semester</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="permit_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="title_activity_post_information">PostInformationActivity</string>
    <string name="title_activity_booking">BookingActivity</string>

</resources>
