<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center"
    android:orientation="vertical"
    tools:context="edu.sjsu.thelaughingtribble.parkhere.controllers.AddPostActivity">



        <EditText
            android:id="@+id/title_edit"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/enter_title"
            android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_vertical|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
